# pose-game

./: AGENTS.md  CREDITS.md  DRAW_OSD_SPEEDUP_PLAN.md  EVALUATION_P3-1.md  PROFILE_ANALYSIS.md  README.md  plan.md  pyproject.toml
runs/: arcade_10s.csv  arcade_20s.csv  arcade_baseline_15s.csv  arcade_dup_roi_on_192_10s.csv  arcade_dup_size160_10s.csv  arcade_dup_size192_10s.csv  arcade_dup_size192_ocl_off_10s.csv  arcade_dup_size192_ocl_on_10s.csv  arcade_dup_size192_tasks_gpu_10s.csv  arcade_dup_size192_tasks_nnapi_10s.csv  arcade_dup_size224_10s.csv  arcade_live_dup_192_10s.csv  arcade_no_pipeline_20s.csv  arcade_optimized_15s.csv  arcade_pipeline_20s.csv  arcade_render_static_10s.csv  arcade_render_static_dup_15s.csv  arcade_render_static_dup_opt_15s.csv  arcade_render_static_opt_10s.csv  arcade_render_static_opt_5s.csv  arcade_text_10s.csv  baseline_arcade_10s.csv  baseline_opencv.csv  baseline_opencv_10s.csv  hud_no_shader_10s.csv  hud_shader_fix_10s.csv  opencv_10s.csv  opencv_cap1080_infer160_10s.csv  opencv_cap720_infer160_10s.csv  opencv_dup_cap1080_10s.csv  opencv_dup_cap720_10s.csv  opencv_no_pipeline_20s.csv  opencv_no_pipeline_5s.csv  opencv_pipeline_20s.csv  opencv_pipeline_5s.csv  opencv_size160_skip0_10s.csv  opencv_size160_skip2_10s.csv  opencv_size192_skip0_10s.csv  opencv_size256_skip0_10s.csv  prof.csv  (+1 more)
scripts/: analyze_profile.py  arcade_jp_text_sample.py  bench_four_variants.py  bench_render_static.py  compare_profiles.py
src/game/: audio.py  camera.py  collision.py  colors.py  devices.py  effects.py  entities.py  gameplay.py  main.py  pipeline.py  player.py  pose.py  profiler.py  render.py  run_tasks_multicam.py  ui.py
