[project]
name = "pose-game"
version = "0.1.0"
description = "MediaPipe Pose x OpenCV 2D falling objects game (offline 2P)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe",
    "numpy",
    "opencv-python",
    "pillow",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# You can run the app with: uv run python -m game.main

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
